# shader-playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: App.cpp  App.hpp  Constants.hpp  ExampleShaders.hpp  Main.cpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp  appicon.rc
